--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.68.3",
     "lucide-react": "^0.468.0",
     "mui": "^0.0.1",
     "next": "15.0.4",
+    "next-sanity": "^9.8.30",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "sanity": "^3.68.3",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
